# SpreadModeler

./: .gitignore  .gitmodules  CMakeLists.txt
Headers/city_map/: city_map.hpp
Headers/config/: config.hpp
Headers/display/: Idisplay.hpp  console_display.hpp
Headers/humans/: human.hpp  human_target.hpp  ill_chance.hpp  illness_modifiers.hpp  registration.hpp
Headers/logger/: ill_logger.hpp  inf_logger.hpp
Headers/model_space/: field.hpp  interaction_space.hpp
Headers/pch/: pch.hpp
Headers/simulator/: simulator.hpp  types.hpp
Headers/tiles/: city_map.hpp  directions.hpp  empty.hpp  field.hpp  home.hpp  hospital.hpp  road.hpp  school.hpp  tile.hpp  work.hpp
Headers/util/: directions.hpp  macroses.hpp  position2.hpp  way.hpp
Resources/: small.config  test.config  test_1.map  test_2.map  test_3.map
Scripts/: analyze_ill.py  analyze_recovery.py  show_susceptible.py
Sources/: main.cpp
Sources/city_map/: city_map.cpp
Sources/config/: config.cpp
Sources/display/: console_display.cpp
Sources/humans/: human.cpp  ill_chance.cpp
Sources/logger/: ill_logger.cpp  inf_logger.cpp
Sources/model_space/: city_map.cpp  field.cpp  interaction_space.cpp
Sources/simulator/: simulator.cpp
Sources/tiles/: city_map.cpp  empty.cpp  field.cpp  home.cpp  hospital.cpp  interaction_space.cpp  road.cpp  school.cpp  tile.cpp  work.cpp
Tests/: CMakeLists.txt  LoggerTest.cpp  city_map_test.cpp  config_test.cpp  inf_logger_test.cpp
